# Slither2

./: .gitignore  Arrow.qml  Bots  CMakeLists.txt  DebugScreen.qml  Eyes.qml  LeaderboardView.qml  Minimap.qml  Readme.txt  SnakeView.qml  aibot.cpp  aibot.h  assets.qrc  bot.cpp  bot.h  eating_bot.cpp  eating_bot.h  followmouse_bot.cpp  followmouse_bot.h  icon.qrc  killing_bot.cpp  killing_bot.h  leaderboard.cpp  leaderboard.h  main.cpp  main.qml  neuralnet.cpp  neuralnet.h  pendants.qrc  playground.cpp  playground.h  playground_savestreams.cpp  qml.qrc  snake.cpp  snake.h  stupid_bot.cpp  stupid_bot.h
Botdefs/: Bots  CMakeLists.txt  aibot.cpp  aibot.h  bot.cpp  eating_bot.cpp  followmouse_bot.cpp  followmouse_bot.h  killing_bot.cpp  neuralnet.cpp  stupid_bot.cpp
NeuralNets/: net1.cpp  net1.h  net2.cpp  net2.h  netBase.cpp  netBase.h
Slither2-SkinEditor/: SkinVis.qml
assets/: assets.qrc  pendants.qrc
data/: Skin.slData  Skin.txt  game.slgame  pendant.slData  snakeDies.m4a
qml/: Arrow.qml  ChunkView.qml  DebugScreen.qml  Eyes.qml  LeaderboardView.qml  Minimap.qml  SnakeView.qml  icon.qrc  main.qml  qml.qrc
skinEditor2/: .gitignore  Button.qml  CMakeLists.txt  ColorGrid.qml  _dataStreams.cpp  editor.h  main.cpp  main.qml  qml.qrc
skinEditor2/loadPendant/: CMakeLists.txt  Chooser.qml  List.qml  assets.qrc  loader.cpp  loader.h  main.cpp  main.qml  qml.qrc
skinEditor2/newColor/: CMakeLists.txt  main.cpp  newcolor.h
src/: chunk.cpp  chunk.h  datamodel.cpp  datamodel.h  leaderboard.cpp  leaderboard.h  main.cpp  playground.cpp  playground.h  playground_savestreams.cpp  snake.cpp  snake.h
tests/auto/: CMakeLists.txt  tst_chunks.cpp
